This is a simple mobile app that will help users to find their Route or bus to their Destination.

--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -6,6 +6,18 @@
     android:layout_height="match_parent"
     android:background="@color/background"
     tools:context=".RegisterActivity">
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="135dp"
+        android:layout_height="0dp"
+        android:layout_marginTop="79dp"
+        android:layout_marginBottom="97dp"
+        android:contentDescription="@string/todo"
+        app:layout_constraintBottom_toTopOf="@+id/textEmail"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/logo_route" />
 
     <EditText
         android:id="@+id/username"
@@ -69,20 +81,18 @@
         android:text="@string/register"
         app:backgroundTint="#886658"
         app:layout_constraintStart_toStartOf="@+id/messages"
-        app:layout_constraintTop_toBottomOf="@+id/messages" />
+        app:layout_constraintTop_toBottomOf="@+id/messagess" />
 
-    <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="135dp"
-        android:layout_height="0dp"
-        android:layout_marginTop="79dp"
-        android:layout_marginBottom="97dp"
-        android:contentDescription="@string/todo"
-        app:layout_constraintBottom_toTopOf="@+id/textEmail"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/logo_route" />
+
+    <TextView
+        android:id="@+id/messagess"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="4dp"
+        android:layout_marginLeft="4dp"
+        android:layout_marginTop="18dp"
+        app:layout_constraintStart_toStartOf="@+id/regiserbutton"
+        app:layout_constraintTop_toBottomOf="@id/messages" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
